--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1328,7 +1328,7 @@ a {
 }
 .cid-sgjav9Ubi2 .dropdown-menu,
 .cid-sgjav9Ubi2 .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjav9Ubi2 .nav-item:focus,
 .cid-sgjav9Ubi2 .nav-link:focus {
@@ -1363,7 +1363,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjav9Ubi2 .navbar.opened {
   transition: all 0.3s;
@@ -1508,7 +1508,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjav9Ubi2 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjav9Ubi2 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3034,7 +3034,7 @@ a {
 }
 .cid-sgjcyY2svw .dropdown-menu,
 .cid-sgjcyY2svw .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjcyY2svw .nav-item:focus,
 .cid-sgjcyY2svw .nav-link:focus {
@@ -3069,7 +3069,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjcyY2svw .navbar.opened {
   transition: all 0.3s;
@@ -3214,7 +3214,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjcyY2svw .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjcyY2svw .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3491,7 +3491,7 @@ a {
 }
 .cid-sgjgzlqtFW .dropdown-menu,
 .cid-sgjgzlqtFW .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjgzlqtFW .nav-item:focus,
 .cid-sgjgzlqtFW .nav-link:focus {
@@ -3526,7 +3526,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjgzlqtFW .navbar.opened {
   transition: all 0.3s;
@@ -3671,7 +3671,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjgzlqtFW .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjgzlqtFW .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -3948,7 +3948,7 @@ a {
 }
 .cid-sgjiVI0nw7 .dropdown-menu,
 .cid-sgjiVI0nw7 .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjiVI0nw7 .nav-item:focus,
 .cid-sgjiVI0nw7 .nav-link:focus {
@@ -3983,7 +3983,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjiVI0nw7 .navbar.opened {
   transition: all 0.3s;
@@ -4128,7 +4128,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjiVI0nw7 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjiVI0nw7 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4491,7 +4491,7 @@ a {
 }
 .cid-sgk40LCT9w .dropdown-menu,
 .cid-sgk40LCT9w .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgk40LCT9w .nav-item:focus,
 .cid-sgk40LCT9w .nav-link:focus {
@@ -4526,7 +4526,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgk40LCT9w .navbar.opened {
   transition: all 0.3s;
@@ -4671,7 +4671,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgk40LCT9w .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgk40LCT9w .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -4882,7 +4882,7 @@ a {
 }
 .cid-sluDRyDEs9 .dropdown-menu,
 .cid-sluDRyDEs9 .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sluDRyDEs9 .nav-item:focus,
 .cid-sluDRyDEs9 .nav-link:focus {
@@ -4917,7 +4917,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sluDRyDEs9 .navbar.opened {
   transition: all 0.3s;
@@ -5062,7 +5062,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sluDRyDEs9 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sluDRyDEs9 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -5733,7 +5733,7 @@ a {
 }
 .cid-sluDW1RrDn .dropdown-menu,
 .cid-sluDW1RrDn .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sluDW1RrDn .nav-item:focus,
 .cid-sluDW1RrDn .nav-link:focus {
@@ -5768,7 +5768,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sluDW1RrDn .navbar.opened {
   transition: all 0.3s;
@@ -5913,7 +5913,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sluDW1RrDn .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sluDW1RrDn .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -7264,7 +7264,7 @@ a {
 }
 .cid-sgjbW0mnHG .dropdown-menu,
 .cid-sgjbW0mnHG .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgjbW0mnHG .nav-item:focus,
 .cid-sgjbW0mnHG .nav-link:focus {
@@ -7299,7 +7299,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjbW0mnHG .navbar.opened {
   transition: all 0.3s;
@@ -7444,7 +7444,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgjbW0mnHG .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgjbW0mnHG .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -7945,7 +7945,7 @@ a {
 }
 .cid-sgktSz438E .dropdown-menu,
 .cid-sgktSz438E .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sgktSz438E .nav-item:focus,
 .cid-sgktSz438E .nav-link:focus {
@@ -7980,7 +7980,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgktSz438E .navbar.opened {
   transition: all 0.3s;
@@ -8125,7 +8125,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sgktSz438E .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sgktSz438E .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -8568,7 +8568,7 @@ a {
 }
 .cid-slZPZHeYeI .dropdown-menu,
 .cid-slZPZHeYeI .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-slZPZHeYeI .nav-item:focus,
 .cid-slZPZHeYeI .nav-link:focus {
@@ -8603,7 +8603,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-slZPZHeYeI .navbar.opened {
   transition: all 0.3s;
@@ -8748,7 +8748,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-slZPZHeYeI .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-slZPZHeYeI .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -8949,7 +8949,7 @@ a {
 }
 .cid-sQemNfxrBN .dropdown-menu,
 .cid-sQemNfxrBN .navbar.opened {
-  background: #232323 !important;
+  background: #22a5e5 !important;
 }
 .cid-sQemNfxrBN .nav-item:focus,
 .cid-sQemNfxrBN .nav-link:focus {
@@ -8984,7 +8984,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sQemNfxrBN .navbar.opened {
   transition: all 0.3s;
@@ -9129,7 +9129,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #22a5e5;
 }
 .cid-sQemNfxrBN .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
